--- a/alurabooks/style.css
+++ b/alurabooks/style.css
@@ -3,6 +3,8 @@
 @import url("./css/carrosel.css");
 @import url("./css/mais-vendidos.css");
 @import url("./css/topicos.css");
+@import url("./css/contato.css");
+@import url("./css/rodape.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
