--- a/alurabooks/css/banner.css
+++ b/alurabooks/css/banner.css
@@ -19,6 +19,7 @@
     background: transparent;
     border: 1px solid var(--branco);
     color: var(--branco);
+    text-align: center;
     border-radius: 24px;
     padding: 1em;
     width: 100%;
@@ -28,8 +29,35 @@
     font-family: var(--fonte-principal);
     font-size: 14px;
     font-weight: 400;
-    text-align: center;
+    padding-left: 0.5em;
     color: var(--branco);
     background: url("../svg/Lupa.svg") no-repeat;
-    background-position: 1.25em;
+    background-position: 1.65em;
+}
+
+@media screen and (min-width:1024px) { 
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+
+    }
+}
+
+@media screen and (min-width:1728px) {
+    .banner__pesquisa {
+        width: 38%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 30
+        
+        em;
+    }
 }
