--- a/alurabooks/css/contato.css
+++ b/alurabooks/css/contato.css
@@ -24,6 +24,7 @@
 }
 
 .contato__email {
+    text-align: center;
     border-radius: 24px;
     background-color: transparent;
     border: 1px  solid  var(--azul);
@@ -41,6 +42,27 @@
     color: var(--azul);
     font-weight: 500;
     font-size: 16px;
+}
+
+@media screen and (min-width:1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__titulo {
+        font-size: 1.5em;
+        width: 60%;
+    }
+
+    .contato__descricao {
+        margin-right: 1em;
+    }
+
+    .contato__email {
+        width: 30%;
+    }
 }
 
 
