--- a/alurabooks/style.css
+++ b/alurabooks/style.css
@@ -1,7 +1,6 @@
 @import url("./css/header.css");
 @import url("./css/banner.css");
 @import url("./css/carrosel.css");
-@import url("./css/mais-vendidos.css");
 @import url("./css/topicos.css");
 @import url("./css/contato.css");
 @import url("./css/rodape.css");
@@ -12,7 +11,11 @@
     --laranja: #EB9800;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --font-principal: "Poppins";
-    --azul: #002f52
+    --azul: #002f52;
+    --fonte-secundario: "Josefin Sans";
+    --preto: #000000;
+
+
 }
 
 body {
